--- a/Modules/UserAccess/CompanyName.MyMeetings.Modules.UserAccess.Infrastructure/CompanyName.MyMeetings.Modules.UserAccess.Infrastructure.csproj
+++ b/Modules/UserAccess/CompanyName.MyMeetings.Modules.UserAccess.Infrastructure/CompanyName.MyMeetings.Modules.UserAccess.Infrastructure.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\CompanyName.MyMeetings.BuildingBlocks.Infrastructure\CompanyName.MyMeetings.BuildingBlocks.Infrastructure.csproj" />
+    <ProjectReference Include="..\CompanyName.MyMeetings.Modules.UserAccess.Domain\CompanyName.MyMeetings.Modules.UserAccess.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
