--- a/API/CompanyName.MyMeetings.API/appsettings.json
+++ b/API/CompanyName.MyMeetings.API/appsettings.json
@@ -7,10 +7,11 @@
   "AllowedHosts": "*",
 
   "EmailsConfiguration": {
-    "FromEmail":  "no-reply@mymeetings.com"
+    "FromEmail": "no-reply@mymeetings.com"
   },
+  "MeetingsConnectionString": "Server=(localdb)\\projects;Database=Meetings;Integrated Security=true;",
   "Security": {
     /* NOTE! This is sensitive data and should be stored in secure way (not here). Added only for demo purpose. */
-    "TextEncryptionKey":  "E546C8DF278CK5990069B522"
+    "TextEncryptionKey": "E546C8DF278CK5990069B522"
   }
 }
